# QtPlayer

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h  vcpkg.json
